--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ description: A sample command-line application.
 #author: <your name> <email@example.com>
 #homepage: https://www.example.com
 environment:
-  sdk: '>=1.0.0 <2.0.0'
-#dependencies:
-#  foo_bar: '>=1.0.0 <2.0.0'
+  sdk: '>=1.9.0 <2.0.0'
+dependencies:
+  sqljocky: '>=0.11.0 <0.12.0'
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
