--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,6 @@ description: A sample command-line application.
 environment:
   sdk: '>=1.9.0 <2.0.0'
 dependencies:
-  sqljocky: '>=0.11.0 <0.12.0'
+  postgresql: "^0.3.1+1"
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
