--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,5 +7,6 @@ environment:
   sdk: '>=1.9.0 <2.0.0'
 dependencies:
   postgresql: '^0.3.1+1'
+  stack_trace: '^1.3.4'
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
